# terzi

./: .dockerignore  Cargo.toml  DOCKER_USAGE.md  Dockerfile  README.md  build.sh  docker-compose.yml  test-docker.sh
.github/workflows/: rust.yml
docs/: README.md  cli-reference.md  configuration.md  troubleshooting.md
examples/: README.md  authentication.sh  basic-requests.sh  configuration.sh  interactive-examples.md  request-management.sh
src/: cli.rs  client.rs  config.rs  interactive.rs  main.rs  output.rs  request.rs  storage.rs  utils.rs
tests/: README.md  cli_integration.rs
tests/integration/: cli_tests.rs
web/: index.html
