[package]
name = "terzi"
version = "1.0.0"
edition = "2024"
description = "Modern CLI API client designed for developer productivity"
license = "MIT"
authors = ["Sabir Khan <simplysabir@gmail.com>"]
repository = "https://github.com/simplysabir/terzi"
homepage = "https://github.com/simplysabir/terzi"
documentation = "https://github.com/simplysabir/terzi#readme"
keywords = ["api", "cli", "http", "client", "rest"]
categories = ["command-line-utilities"]

[[bin]]
name = "terzi"
path = "src/main.rs"

[dependencies]
# CLI and argument parsing
clap = { version = "4.4", features = ["derive", "color", "suggestions"] }
dialoguer = { version = "0.11", features = ["completion", "history", "fuzzy-select"] }
console = "0.15"
indicatif = "0.17"

# HTTP client and networking
reqwest = { version = "0.11", features = ["json", "stream", "multipart", "cookies"] }
tokio = { version = "1.0", features = ["full"] }
url = "2.4"
mime = "0.3"
http = "0.2"

# Serialization and data handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Output formatting and colors
colored = "2.0"
syntect = "5.1"
comfy-table = "7.0"
textwrap = "0.16"

# Configuration and storage
dirs = "5.0"
config = "0.13"

# Error handling and utilities
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
base64 = "0.21"
urlencoding = "2.1"
regex = "1.10"

# Interactive features
crossterm = "0.27"
ratatui = "0.24"
atty = "0.2"
term_size = "0.3"

# Async utilities
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.5"
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"